# ElysianShadowsJamEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c  test.txt
cmd/dreamcast/: clean.sh  setup.sh
cmd/dreamsdk/: build.sh  run.sh
cmd/emscripten_linux/: build.sh  clean.sh  run.sh  setup.sh
cmd/emscripten_win/: build.bat  clean.bat  run.bat  setup.bat
cmd/linux/: build.sh  run.sh  setup.sh
cmd/mingw/: build.sh  clean.sh  setup.sh
cmd/msvc/: build.bat  clean.bat  run.bat  setup.bat
cmd/msys/: build.sh  clean.sh  run.sh  setup.sh
misc/: index.html
project/: project.c  project.h
src/: app.h  engine.h  platform.h  rect2d.h
src/app/: project_stub.h
src/engine/: assets.h  input.h  rect2d.c  rect2d.h
src/macros/: gimbal_properties_extensions.h
src/platform/: gl.c  gl.h  specific.h
src/utils/macros/: gimbal_properties_extensions.h  gl_helpers.h
